--- a/text-summarization.ipynb
+++ b/text-summarization.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "3063ab9c",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "83aa1441",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 3,
    "id": "2fd4a9ed",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 4,
    "id": "6d31da87",
    "metadata": {},
    "outputs": [
@@ -101,7 +101,7 @@
        "'The old house at the end of the street had always been shrouded in mystery. The rumors were that it was once owned by a powerful witch who practiced dark magic. But most people dismissed it as a silly superstition. One night, a group of curious teenagers decided to break into the house to see if the rumors were true. As they searched the dusty rooms, they found strange symbols etched into the walls and floor. Suddenly, they heard a cackling laughter coming from somewhere deep within the house. As they followed the sound, they stumbled upon a secret room filled with potions, herbs, and ancient books on witchcraft. Suddenly, the door slammed shut behind them, and they were trapped. One by one, the teenagers began to disappear, taken by an unseen force. They could hear whispers and chants coming from the shadows, and they knew they were not alone. In a desperate attempt to escape, the remaining teenagers tried to break down the door, but it was too strong. As they huddled in the corner, they saw a figure emerge from the darkness. It was the witch, more terrifying than they could have ever imagined. With a wave of her hand, she cast a spell that sent them all into a deep sleep. When they awoke, they were outside the house, unharmed but forever changed by their encounter with the witch. From that day forward, they never spoke of what happened in the old house, but they could never forget the feeling of dread that came with the whispers of witchcraft. They knew that the witch was still out there, waiting for her next victims to wander into her grasp.'"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 5,
    "id": "9a43e314",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 6,
    "id": "1439ca5c",
    "metadata": {},
    "outputs": [],
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 7,
    "id": "abe4336a",
    "metadata": {},
    "outputs": [],
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 8,
    "id": "efe20639",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 9,
    "id": "b8d96236",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
        " 'They knew that the witch was still out there, waiting for her next victims to wander into her grasp.']"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 10,
    "id": "fd79e1fb",
    "metadata": {},
    "outputs": [
@@ -233,7 +233,7 @@
        "17"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 11,
    "id": "004cba44",
    "metadata": {},
    "outputs": [
@@ -278,7 +278,7 @@
        " 'They knew that the witch was still out there, waiting for her next victims to wander into her grasp.': 8}"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 12,
    "id": "9063a568",
    "metadata": {},
    "outputs": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 13,
    "id": "f767c606",
    "metadata": {},
    "outputs": [],
@@ -357,10 +357,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 14,
    "id": "2173c997",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\syedi\\anaconda3\\lib\\site-packages\\transformers\\models\\t5\\tokenization_t5.py:163: FutureWarning: This tokenizer was incorrectly instantiated with a model max length of 512 which will be corrected in Transformers v5.\n",
+      "For now, this behavior is kept to avoid breaking backwards compatibility when padding/encoding with `truncation is True`.\n",
+      "- Be aware that you SHOULD NOT rely on t5-large automatically truncating your input to 512 when padding/encoding.\n",
+      "- If you want to encode/pad to sequences longer than 512 you can either instantiate this tokenizer with `model_max_length` or pass `max_length` when encoding/padding.\n",
+      "- To avoid this warning, please instantiate this tokenizer with `model_max_length` set to your preferred value.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "tokenizer = T5Tokenizer.from_pretrained('t5-large')\n",
     "model = T5ForConditionalGeneration.from_pretrained('t5-large')"
@@ -376,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 15,
    "id": "43631f10",
    "metadata": {},
    "outputs": [],
@@ -396,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 16,
    "id": "7e32a57d",
    "metadata": {},
    "outputs": [
